refactor: substituir collect(Collectors.toList() para apenas .toList() em EquipamentoService